fix(checkbox): icon position when checked (#164)
icon position not centered when checkbox is checked

--- a/packages/theme/src/checkbox/vars.less
+++ b/packages/theme/src/checkbox/vars.less
@@ -31,8 +31,8 @@
   --ti-checkbox-border-color-hover: var(--ti-base-color-brand-6);
   --ti-checkbox-icon-height: 8px;
   --ti-checkbox-icon-width: 4px;
-  --ti-checkbox-icon-left: 4.5px;
-  --ti-checkbox-icon-top: 0;
+  --ti-checkbox-icon-left: 5.5px;
+  --ti-checkbox-icon-top: 1.5px;
   --ti-checkbox-bg-color-disable: var(--ti-base-color-bg-5);
   --ti-checkbox-border-color-unchecked-disabled: var(--ti-base-color-common-1);
   --ti-checkbox-label-text-color-disabled: var(--ti-base-color-common-2);
